# FastApiApp

./: .gitignore  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 889aad68fe18_move_is_active_from_profile_to_user_.py  a8e6969c1587_.py  b04b6b065f41_initial_migration.py
api/: courses.py  users.py
api/utils/: courses.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: course.py  user.py
