[tool.poetry]
name = "fastapiapp"
version = "0.1.0"
description = ""
authors = ["Rashidnawaz533 <Rashidnawaz533@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
